@@ -1325,8 +1325,8 @@ BUNdelete(BAT *b, oid o)
  * transaction management has to be performed, replaced values should
  * be saved explicitly.
  */
-gdk_return
-BUNinplace(BAT *b, BUN p, const void *t, bool force)
+static gdk_return
+BUNinplacemulti(BAT *b, const oid *positions, const void *values, BUN count, bool force)
 {
 	BUN last = BUNlast(b) - 1;
 	BATiter bi = bat_iterator(b);
@@ -1334,212 +1334,214 @@ BUNinplace(BAT *b, BUN p, const void *t, bool force)
 	BUN prv, nxt;
 	const void *val;
 
-	assert(p >= b->batInserted || force);
-	assert(b->tbaseoff == 0);
-
-	/* uncommitted BUN elements */
-
 	/* zap alignment info */
 	if (!force && (b->batRestricted != BAT_WRITE || b->batSharecnt > 0)) {
 		GDKerror("access denied to %s, aborting.\n",
 			 BATgetId(b));
 		return GDK_FAIL;
 	}
-	val = BUNtail(bi, p);	/* old value */
-	if (ATOMcmp(b->ttype, val, t) == 0)
-		return GDK_SUCCEED; /* nothing to do */
-	if (b->tnil &&
-	    ATOMcmp(b->ttype, val, ATOMnilptr(b->ttype)) == 0 &&
-	    ATOMcmp(b->ttype, t, ATOMnilptr(b->ttype)) != 0) {
-		/* if old value is nil and new value isn't, we're not
-		 * sure anymore about the nil property, so we must
-		 * clear it */
-		b->tnil = false;
-	}
-	HASHdelete(b, p, val);	/* first delete old value from hash */
-	if (b->ttype != TYPE_void && ATOMlinear(b->ttype)) {
-		PROPrec *prop;
+	for (BUN i = 0; i < count; i++) {
+		BUN p = positions[i] - b->hseqbase;
+		const void *t = b->ttype && b->tvarsized ?
+			((const void **) values)[i] :
+			(const void *) ((const char *) values + i * Tsize(b));
 
-		if ((prop = BATgetprop(b, GDK_MAX_VALUE)) != NULL) {
-			if (ATOMcmp(b->ttype, t, ATOMnilptr(b->ttype)) != 0 &&
-			    ATOMcmp(b->ttype, VALptr(&prop->v), t) < 0) {
-				/* new value is larger than previous
-				 * largest */
-				BATsetprop(b, GDK_MAX_VALUE, b->ttype, t);
-				BATsetprop(b, GDK_MAX_POS, TYPE_oid, &(oid){p});
-			} else if (ATOMcmp(b->ttype, t, val) != 0 &&
-				   ATOMcmp(b->ttype, VALptr(&prop->v), val) == 0) {
-				/* old value is equal to largest and
-				 * new value is smaller (see above),
-				 * so we don't know anymore which is
-				 * the largest */
-				BATrmprop(b, GDK_MAX_VALUE);
-				BATrmprop(b, GDK_MAX_POS);
-			}
+		val = BUNtail(bi, p);	/* old value */
+		if (ATOMcmp(b->ttype, val, t) == 0)
+			continue; /* nothing to do */
+		if (b->tnil &&
+		    ATOMcmp(b->ttype, val, ATOMnilptr(b->ttype)) == 0 &&
+		    ATOMcmp(b->ttype, t, ATOMnilptr(b->ttype)) != 0) {
+			/* if old value is nil and new value isn't, we're not
+			 * sure anymore about the nil property, so we must
+			 * clear it */
+			b->tnil = false;
 		}
-		if ((prop = BATgetprop(b, GDK_MIN_VALUE)) != NULL) {
-			if (ATOMcmp(b->ttype, t, ATOMnilptr(b->ttype)) != 0 &&
-			    ATOMcmp(b->ttype, VALptr(&prop->v), t) > 0) {
-				/* new value is smaller than previous
-				 * smallest */
-				BATsetprop(b, GDK_MIN_VALUE, b->ttype, t);
-				BATsetprop(b, GDK_MIN_POS, TYPE_oid, &(oid){p});
-			} else if (ATOMcmp(b->ttype, t, val) != 0 &&
-				   ATOMcmp(b->ttype, VALptr(&prop->v), val) <= 0) {
-				/* old value is equal to smallest and
-				 * new value is larger (see above), so
-				 * we don't know anymore which is the
-				 * smallest */
-				BATrmprop(b, GDK_MIN_VALUE);
-				BATrmprop(b, GDK_MIN_POS);
-			}
-		}
-		BATrmprop(b, GDK_NUNIQUE);
-		BATrmprop(b, GDK_UNIQUE_ESTIMATE);
-#if 0		/* enable if we have more properties than just min/max */
-		do {
-			for (prop = b->tprops; prop; prop = prop->next)
-				if (prop->id != GDK_MAX_VALUE &&
-				    prop->id != GDK_MIN_VALUE &&
-				    prop->id != GDK_HASH_BUCKETS) {
-					BATrmprop(b, prop->id);
-					break;
+		HASHdelete(b, p, val);	/* first delete old value from hash */
+		if (b->ttype != TYPE_void && ATOMlinear(b->ttype)) {
+			PROPrec *prop;
+
+			if ((prop = BATgetprop(b, GDK_MAX_VALUE)) != NULL) {
+				if (ATOMcmp(b->ttype, t, ATOMnilptr(b->ttype)) != 0 &&
+				    ATOMcmp(b->ttype, VALptr(&prop->v), t) < 0) {
+					/* new value is larger than previous
+					 * largest */
+					BATsetprop(b, GDK_MAX_VALUE, b->ttype, t);
+					BATsetprop(b, GDK_MAX_POS, TYPE_oid, &(oid){p});
+				} else if (ATOMcmp(b->ttype, t, val) != 0 &&
+					   ATOMcmp(b->ttype, VALptr(&prop->v), val) == 0) {
+					/* old value is equal to largest and
+					 * new value is smaller (see above),
+					 * so we don't know anymore which is
+					 * the largest */
+					BATrmprop(b, GDK_MAX_VALUE);
+					BATrmprop(b, GDK_MAX_POS);
 				}
-		} while (prop);
+			}
+			if ((prop = BATgetprop(b, GDK_MIN_VALUE)) != NULL) {
+				if (ATOMcmp(b->ttype, t, ATOMnilptr(b->ttype)) != 0 &&
+				    ATOMcmp(b->ttype, VALptr(&prop->v), t) > 0) {
+					/* new value is smaller than previous
+					 * smallest */
+					BATsetprop(b, GDK_MIN_VALUE, b->ttype, t);
+					BATsetprop(b, GDK_MIN_POS, TYPE_oid, &(oid){p});
+				} else if (ATOMcmp(b->ttype, t, val) != 0 &&
+					   ATOMcmp(b->ttype, VALptr(&prop->v), val) <= 0) {
+					/* old value is equal to smallest and
+					 * new value is larger (see above), so
+					 * we don't know anymore which is the
+					 * smallest */
+					BATrmprop(b, GDK_MIN_VALUE);
+					BATrmprop(b, GDK_MIN_POS);
+				}
+			}
+			BATrmprop(b, GDK_NUNIQUE);
+			BATrmprop(b, GDK_UNIQUE_ESTIMATE);
+#if 0		/* enable if we have more properties than just min/max */
+			do {
+				for (prop = b->tprops; prop; prop = prop->next)
+					if (prop->id != GDK_MAX_VALUE &&
+					    prop->id != GDK_MIN_VALUE &&
+					    prop->id != GDK_HASH_BUCKETS) {
+						BATrmprop(b, prop->id);
+						break;
+					}
+			} while (prop);
 #endif
-	} else {
-		PROPdestroy(b);
-	}
-	OIDXdestroy(b);
-	IMPSdestroy(b);
-	if (b->tvarsized && b->ttype) {
-		var_t _d;
-		ptr _ptr;
-		_ptr = BUNtloc(bi, p);
-		switch (b->twidth) {
-		default:	/* only three or four cases possible */
-			_d = (var_t) * (uint8_t *) _ptr + GDK_VAROFFSET;
-			break;
-		case 2:
-			_d = (var_t) * (uint16_t *) _ptr + GDK_VAROFFSET;
-			break;
-		case 4:
-			_d = (var_t) * (uint32_t *) _ptr;
-			break;
-#if SIZEOF_VAR_T == 8
-		case 8:
-			_d = (var_t) * (uint64_t *) _ptr;
-			break;
-#endif
+		} else {
+			PROPdestroy(b);
 		}
-		if (ATOMreplaceVAR(b, &_d, t) != GDK_SUCCEED)
-			return GDK_FAIL;
-		if (b->twidth < SIZEOF_VAR_T &&
-		    (b->twidth <= 2 ? _d - GDK_VAROFFSET : _d) >= ((size_t) 1 << (8 * b->twidth))) {
-			/* doesn't fit in current heap, upgrade it */
-			if (GDKupgradevarheap(b, _d, 0, false) != GDK_SUCCEED)
+		OIDXdestroy(b);
+		IMPSdestroy(b);
+		if (b->tvarsized && b->ttype) {
+			var_t _d;
+			ptr _ptr;
+			_ptr = BUNtloc(bi, p);
+			switch (b->twidth) {
+			default:	/* only three or four cases possible */
+				_d = (var_t) * (uint8_t *) _ptr + GDK_VAROFFSET;
+				break;
+			case 2:
+				_d = (var_t) * (uint16_t *) _ptr + GDK_VAROFFSET;
+				break;
+			case 4:
+				_d = (var_t) * (uint32_t *) _ptr;
+				break;
+#if SIZEOF_VAR_T == 8
+			case 8:
+				_d = (var_t) * (uint64_t *) _ptr;
+				break;
+#endif
+			}
+			if (ATOMreplaceVAR(b, &_d, t) != GDK_SUCCEED)
 				return GDK_FAIL;
-		}
-		_ptr = BUNtloc(bi, p);
-		switch (b->twidth) {
-		default:	/* only three or four cases possible */
-			* (uint8_t *) _ptr = (uint8_t) (_d - GDK_VAROFFSET);
-			break;
-		case 2:
-			* (uint16_t *) _ptr = (uint16_t) (_d - GDK_VAROFFSET);
-			break;
-		case 4:
-			* (uint32_t *) _ptr = (uint32_t) _d;
-			break;
+			if (b->twidth < SIZEOF_VAR_T &&
+			    (b->twidth <= 2 ? _d - GDK_VAROFFSET : _d) >= ((size_t) 1 << (8 * b->twidth))) {
+				/* doesn't fit in current heap, upgrade it */
+				if (GDKupgradevarheap(b, _d, 0, false) != GDK_SUCCEED)
+					return GDK_FAIL;
+			}
+			_ptr = BUNtloc(bi, p);
+			switch (b->twidth) {
+			default:	/* only three or four cases possible */
+				* (uint8_t *) _ptr = (uint8_t) (_d - GDK_VAROFFSET);
+				break;
+			case 2:
+				* (uint16_t *) _ptr = (uint16_t) (_d - GDK_VAROFFSET);
+				break;
+			case 4:
+				* (uint32_t *) _ptr = (uint32_t) _d;
+				break;
 #if SIZEOF_VAR_T == 8
-		case 8:
-			* (uint64_t *) _ptr = (uint64_t) _d;
-			break;
+			case 8:
+				* (uint64_t *) _ptr = (uint64_t) _d;
+				break;
 #endif
-		}
-	} else if (ATOMstorage(b->ttype) == TYPE_msk) {
-		mskSetVal(b, p, * (msk *) t);
-	} else {
-		assert(BATatoms[b->ttype].atomPut == NULL);
-		if (ATOMfix(b->ttype, t) != GDK_SUCCEED)
-			return GDK_FAIL;
-		if (ATOMunfix(b->ttype, BUNtloc(bi, p)) != GDK_SUCCEED)
-			return GDK_FAIL;
-		switch (ATOMsize(b->ttype)) {
-		case 0:	     /* void */
-			break;
-		case 1:
-			((bte *) b->theap->base)[p] = * (bte *) t;
-			break;
-		case 2:
-			((sht *) b->theap->base)[p] = * (sht *) t;
-			break;
-		case 4:
-			((int *) b->theap->base)[p] = * (int *) t;
-			break;
-		case 8:
-			((lng *) b->theap->base)[p] = * (lng *) t;
-			break;
-		case 16:
+			}
+		} else if (ATOMstorage(b->ttype) == TYPE_msk) {
+			mskSetVal(b, p, * (msk *) t);
+		} else {
+			assert(BATatoms[b->ttype].atomPut == NULL);
+			if (ATOMfix(b->ttype, t) != GDK_SUCCEED)
+				return GDK_FAIL;
+			if (ATOMunfix(b->ttype, BUNtloc(bi, p)) != GDK_SUCCEED)
+				return GDK_FAIL;
+			switch (ATOMsize(b->ttype)) {
+			case 0:	     /* void */
+				break;
+			case 1:
+				((bte *) b->theap->base)[p] = * (bte *) t;
+				break;
+			case 2:
+				((sht *) b->theap->base)[p] = * (sht *) t;
+				break;
+			case 4:
+				((int *) b->theap->base)[p] = * (int *) t;
+				break;
+			case 8:
+				((lng *) b->theap->base)[p] = * (lng *) t;
+				break;
+			case 16:
 #ifdef HAVE_HGE
-			((hge *) b->theap->base)[p] = * (hge *) t;
+				((hge *) b->theap->base)[p] = * (hge *) t;
 #else
-			((uuid *) b->theap->base)[p] = * (uuid *) t;
+				((uuid *) b->theap->base)[p] = * (uuid *) t;
 #endif
-			break;
-		default:
-			memcpy(BUNtloc(bi, p), t, ATOMsize(b->ttype));
-			break;
-		}
-	}
-
-	HASHinsert(b, p, t);	/* insert new value into hash */
-
-	tt = b->ttype;
-	prv = p > 0 ? p - 1 : BUN_NONE;
-	nxt = p < last ? p + 1 : BUN_NONE;
-
-	if (BATtordered(b)) {
-		if (prv != BUN_NONE &&
-		    ATOMcmp(tt, t, BUNtail(bi, prv)) < 0) {
-			b->tsorted = false;
-			b->tnosorted = p;
-		} else if (nxt != BUN_NONE &&
-			   ATOMcmp(tt, t, BUNtail(bi, nxt)) > 0) {
-			b->tsorted = false;
-			b->tnosorted = nxt;
-		} else if (b->ttype != TYPE_void && BATtdense(b)) {
-			if (prv != BUN_NONE &&
-			    1 + * (oid *) BUNtloc(bi, prv) != * (oid *) t) {
-				b->tseqbase = oid_nil;
-			} else if (nxt != BUN_NONE &&
-				   * (oid *) BUNtloc(bi, nxt) != 1 + * (oid *) t) {
-				b->tseqbase = oid_nil;
-			} else if (prv == BUN_NONE &&
-				   nxt == BUN_NONE) {
-				b->tseqbase = * (oid *) t;
+				break;
+			default:
+				memcpy(BUNtloc(bi, p), t, ATOMsize(b->ttype));
+				break;
 			}
 		}
-	} else if (b->tnosorted >= p)
-		b->tnosorted = 0;
-	if (BATtrevordered(b)) {
-		if (prv != BUN_NONE &&
-		    ATOMcmp(tt, t, BUNtail(bi, prv)) > 0) {
-			b->trevsorted = false;
-			b->tnorevsorted = p;
-		} else if (nxt != BUN_NONE &&
-			   ATOMcmp(tt, t, BUNtail(bi, nxt)) < 0) {
-			b->trevsorted = false;
-			b->tnorevsorted = nxt;
-		}
-	} else if (b->tnorevsorted >= p)
-		b->tnorevsorted = 0;
-	if (((b->ttype != TYPE_void) & b->tkey) && b->batCount > 1) {
-		BATkey(b, false);
-	} else if (!b->tkey && (b->tnokey[0] == p || b->tnokey[1] == p))
-		b->tnokey[0] = b->tnokey[1] = 0;
-	if (b->tnonil && ATOMstorage(b->ttype) != TYPE_msk)
-		b->tnonil = t && ATOMcmp(b->ttype, t, ATOMnilptr(b->ttype)) != 0;
+
+		HASHinsert(b, p, t);	/* insert new value into hash */
+
+		tt = b->ttype;
+		prv = p > 0 ? p - 1 : BUN_NONE;
+		nxt = p < last ? p + 1 : BUN_NONE;
+
+		if (BATtordered(b)) {
+			if (prv != BUN_NONE &&
+			    ATOMcmp(tt, t, BUNtail(bi, prv)) < 0) {
+				b->tsorted = false;
+				b->tnosorted = p;
+			} else if (nxt != BUN_NONE &&
+				   ATOMcmp(tt, t, BUNtail(bi, nxt)) > 0) {
+				b->tsorted = false;
+				b->tnosorted = nxt;
+			} else if (b->ttype != TYPE_void && BATtdense(b)) {
+				if (prv != BUN_NONE &&
+				    1 + * (oid *) BUNtloc(bi, prv) != * (oid *) t) {
+					b->tseqbase = oid_nil;
+				} else if (nxt != BUN_NONE &&
+					   * (oid *) BUNtloc(bi, nxt) != 1 + * (oid *) t) {
+					b->tseqbase = oid_nil;
+				} else if (prv == BUN_NONE &&
+					   nxt == BUN_NONE) {
+					b->tseqbase = * (oid *) t;
+				}
+			}
+		} else if (b->tnosorted >= p)
+			b->tnosorted = 0;
+		if (BATtrevordered(b)) {
+			if (prv != BUN_NONE &&
+			    ATOMcmp(tt, t, BUNtail(bi, prv)) > 0) {
+				b->trevsorted = false;
+				b->tnorevsorted = p;
+			} else if (nxt != BUN_NONE &&
+				   ATOMcmp(tt, t, BUNtail(bi, nxt)) < 0) {
+				b->trevsorted = false;
+				b->tnorevsorted = nxt;
+			}
+		} else if (b->tnorevsorted >= p)
+			b->tnorevsorted = 0;
+		if (((b->ttype != TYPE_void) & b->tkey) && b->batCount > 1) {
+			BATkey(b, false);
+		} else if (!b->tkey && (b->tnokey[0] == p || b->tnokey[1] == p))
+			b->tnokey[0] = b->tnokey[1] = 0;
+		if (b->tnonil && ATOMstorage(b->ttype) != TYPE_msk)
+			b->tnonil = t && ATOMcmp(b->ttype, t, ATOMnilptr(b->ttype)) != 0;
+	}
 	b->theap->dirty = true;
 	if (b->tvheap)
 		b->tvheap->dirty = true;
@@ -1550,27 +1552,20 @@ BUNinplace(BAT *b, BUN p, const void *t, bool force)
 /* very much like void_inplace, except this materializes a void tail
  * column if necessarry */
 gdk_return
-BUNreplace(BAT *b, oid id, const void *t, bool force)
+BUNreplacemulti(BAT *b, const oid *positions, const void *values, BUN count, bool force)
 {
 	BATcheck(b, GDK_FAIL);
-	if (t == NULL) {
-		GDKerror("tail value is nil");
+
+	if (b->ttype == TYPE_void && BATmaterialize(b) != GDK_SUCCEED)
 		return GDK_FAIL;
-	}
 
-	if (id < b->hseqbase || id >= b->hseqbase + BATcount(b))
-		return GDK_SUCCEED;
+	return BUNinplacemulti(b, positions, values, count, force);
+}
 
-	if (b->ttype == TYPE_void) {
-		/* no need to materialize if value doesn't change */
-		if (is_oid_nil(b->tseqbase) ||
-		    b->tseqbase + id - b->hseqbase == *(const oid *) t)
-			return GDK_SUCCEED;
-		if (BATmaterialize(b) != GDK_SUCCEED)
-			return GDK_FAIL;
-	}
-
-	return BUNinplace(b, id - b->hseqbase, t, force);
+gdk_return
+BUNreplace(BAT *b, oid id, const void *t, bool force)
+{
+	return BUNreplacemulti(b, &id, b->ttype && b->tvarsized ? (const void *) &t : t, 1, force);
 }
 
 /* very much like BUNreplace, but this doesn't make any changes if the
@@ -1585,7 +1580,7 @@ void_inplace(BAT *b, oid id, const void *val, bool force)
 	}
 	if (b->ttype == TYPE_void)
 		return GDK_SUCCEED;
-	return BUNinplace(b, id - b->hseqbase, val, force);
+	return BUNinplacemulti(b, &id, b->ttype && b->tvarsized ? (const void *) &val : (const void *) val, 1, force);
 }
 
 /*
